<resources>
    <string name="app_name">AnyWall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_post">Create a Post</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">Welcome to AnyWall</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="error_intro">Hawu! Error.</string>
    <string name="error_join">", and "</string>
    <string name="error_blank_username">blank username</string>
    <string name="error_blank_password">blank password</string>
    <string name="error_mismatched_passwords">passwords don\'t match</string>
    <string name="error_message_end">.</string>
    <string name="sign_in">Sign In</string>
    <string name="Go">Let\'s Go</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Re-enter password</string>
    <string name="signup">Sign Up</string>
    <string name="progress_signup">Signing you up&#8230;></string>
    <string name="log_in">Log In</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="prompt_post">Enter post text</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="post_out_of_range">Post out of range.</string>
    <string name="login">Log In</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log Out</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="gps_not_found_title">GPS not enabled</string>
    <string name="gps_not_found_message">Enable GPS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
